change meta data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,9 +10,11 @@
     <meta property="og:title" content="مساعد الفرز الطبي الذكي" />
     <meta property="og:description" content="مساعد الفرز الطبي بالذكاء الاصطناعي. احصل على إرشادات صحية فورية وتحليل الأعراض وتوصيات مخصصة." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://cdn.prod.website-files.com/637e5037f3ef83b76dcfc8f9/686beb40f1ea25beebcb67da_top-health-chatbots.webp" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@MediTriage" />
+    <meta name="twitter:image" content="https://cdn.prod.website-files.com/637e5037f3ef83b76dcfc8f9/686beb40f1ea25beebcb67da_top-health-chatbots.webp" />
 
     <link rel="canonical" href="/" />
   </head>
